[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/eh_jogos_game_jolt_api/custom_nodes/Node/eh_GJUsersAuth.gd" type="Script" id=1]
[ext_resource path="res://FetchButton.gd" type="Script" id=2]
[ext_resource path="res://Response.gd" type="Script" id=3]
[ext_resource path="res://AuthButton.gd" type="Script" id=4]
[ext_resource path="res://addons/eh_jogos_game_jolt_api/custom_nodes/Node/eh_GJUsersFetch.gd" type="Script" id=5]

[node name="Demo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResponseTitle" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -33.0
margin_top = 52.0
margin_right = 33.0
margin_bottom = 66.0
text = "Response:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Response" type="Label" parent="."]
anchor_top = 0.109
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 60.0
margin_right = -60.0
margin_bottom = -60.0
autowrap = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 42.0
custom_constants/separation = 15
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AuthButton" type="Button" parent="HBoxContainer"]
margin_left = 366.0
margin_right = 502.0
margin_bottom = 42.0
text = "Make Auth Request"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="eh_GJUsersAuth" type="Node" parent="HBoxContainer/AuthButton"]
script = ExtResource( 1 )

[node name="FetchButton" type="Button" parent="HBoxContainer"]
margin_left = 517.0
margin_right = 658.0
margin_bottom = 42.0
text = "Make Fetch Request"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="eh_GJUsersFetch" type="Node" parent="HBoxContainer/FetchButton"]
script = ExtResource( 5 )
[connection signal="gj_auth_completed" from="HBoxContainer/AuthButton/eh_GJUsersAuth" to="Response" method="_on_eh_GJUsersAuth_gj_auth_completed"]
[connection signal="gj_auth_failed" from="HBoxContainer/AuthButton/eh_GJUsersAuth" to="Response" method="_on_eh_GJUsersAuth_gj_auth_failed"]
[connection signal="gj_fetch_failed" from="HBoxContainer/FetchButton/eh_GJUsersFetch" to="Response" method="_on_eh_GJUsersFetch_gj_fetch_failed"]
[connection signal="gj_fetch_user_completed" from="HBoxContainer/FetchButton/eh_GJUsersFetch" to="Response" method="_on_eh_GJUsersFetch_gj_fetch_user_completed"]
[connection signal="gj_fetch_users_completed" from="HBoxContainer/FetchButton/eh_GJUsersFetch" to="Response" method="_on_eh_GJUsersFetch_gj_fetch_users_completed"]
